# canrun

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  G-ASSIST_PLUGIN_VERIFICATION.md  README.md  app.py  build.py  canrun_compatibility_analyzer.py  canrun_engine.py  canrun_game_fetcher.py  canrun_game_matcher.py  canrun_hardware_detector.py  canrun_ml_predictor.py  canrun_model_loader.py  check_data_structure.py  config.json  deploy_plugin.bat  g_assist_response_fixer.py  install_g_assist_plugin.bat  install_plugin.bat  manifest.json  plugin.py  plugin_legacy.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_input.json  test_project_validation.py  troubleshoot_g_assist_deployment.md
.gradio/flagged/: dataset1.csv
canrun/: __init__.py
canrun/src/: __init__.py  canrun_engine.py  display_detector.py  dynamic_performance_predictor.py  game_requirements_fetcher.py  ml_fps_model.json  ml_model_loader.py  privacy_aware_hardware_detector.py  rtx_llm_analyzer.py  service_container.py  train_unified_ml_model_2025.py
canrun/src/data_sources/: game_requirements_model.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: cpu_benchmarks.json  game_requirements.json  game_requirements.json.bak  gpu_hierarchy.json  ml_fps_model.json  training_benchmarks.json  unified_calibrator_2025.pkl  unified_scaler_2025.pkl
docs/: PYINSTALLER_ML_BUNDLING.md  performance_predictor_improvements.md  remove_large_file_from_git_history.md
plugin/: README.md  build.bat  g-assist-plugin-canrun.py  manifest.json  plugin.py  requirements.txt  setup.bat  test.bat
plugins/: manifest.json
plugins/canrun/: manifest.json
scripts/: populate_comprehensive_benchmarks.py
src/: __init__.py  advanced_performance_assessor_backup.py  canrun_engine.py  compatibility_analyzer.py  display_detector.py  dynamic_performance_predictor.py  game_requirements_fetcher.py  hardware_detector.py  ml_fps_model.json  ml_model_loader.py  ml_pipeline_datascience.py  optimized_game_fuzzy_matcher.py  performance_predictor.py  privacy_aware_hardware_detector.py  requirements_fetcher.py  rtx_llm_analyzer.py  train_fps_predictor_ml_model.py  train_ml_model_enhanced.py  train_unified_ml_model_2025.py
src/data_sources/: data_source.py
test/: run_all_tests.py  sample_queries.py  test_1440p_simple.py  test_4k_ultrawide_classification.py  test_basic_diagnostic.py  test_canrun_integration.py  test_commands.txt  test_compatibility_analysis.py  test_compatibility_fix.py  test_compatibility_input.json  test_config_files.py  test_core_workflow.py  test_crash_diagnosis.py  test_cuda.py  test_data_structure.py  test_detailed_output_format.py  test_diablo4_detailed.py  test_diablo4_workflow.py  test_diablo_compatibility.py  test_diablo_direct.py  test_diablo_matching.py  test_diablo_matching_simple.py  test_display_detection.py  test_display_detection_actual.py  test_display_resolution.py  test_display_resolution_fix.py  test_emoji_g_assist_integration.py  test_emoji_unicode_fixing.py  test_enhanced_g_assist_communication.py  test_enhanced_llm_integration.py  test_executable_compatibility.py  test_executable_ml_validation.py  test_fps_ml_debug.py  test_fps_variations.py  test_fuzzy_integration.py  test_fuzzy_matcher_debug.py  test_g_assist_communication.py  test_g_assist_fixes.py  test_g_assist_installation.py  test_g_assist_minimal_diagnostic.py  (+42 more)
